2015-02-25 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Controllers/NamePromptController.m
	I no name is entered, do not do anyything instead of closing the panel.

2015-02-25 Riccardo Mottola <rm@gnu.org>

	* InFilters/DCCSupport/DCCTransfer.h
	* InFilters/DCCSupport/DCCTransfer.m
	* InFilters/DCCSupport/DCCSender.h
	* InFilters/DCCSupport/DCCSender.m
	* InFilters/DCCSupport/DCCGetter.h
	* InFilters/DCCSupport/DCCGetter.m
	* InFilters/DCCSupport/DCCObject.h
	* InFilters/DCCSupport/DCCObject.m
	new DCCTransfer superclass for DCCSender and DCCGetter, further cleanup

2015-02-25 Riccardo Mottola <rm@gnu.org>

	* InFilters/Highlighting/Highlighting.m
	Local variable with explicit type, substitute GS macro

	* InFilters/Highlighting/HighlightingPreferencesController.h
	Declare local protocol for < 10.6

2015-02-24 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Tools/dns_helper.m
	Look for all addresses for the first IPv4 looking one

2015-02-24 Riccardo Mottola <rm@gnu.org>

	* TalkSoupBundles/Functions.m
	* TalkSoupBundles/TalkSoupMisc.h
	* InFilters/DCCSupport/DCCSupport.m
	* Output/GNUstepOutput/Controllers/NamePromptController.m
	* Output/GNUstepOutput/Controllers/InputController.m
	* Source/commands.m
	Explicit return types to NSArray.

2015-02-23 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Controllers/Preferences/BundlePreferencesController.m
	Do not set description if nil.

	* Output/GNUstepOutput/Controllers/ContentControllers/StandardContentController.m
	Create AttStr directly.

	* InFilters/DCCSupport/DCCSupport.m
	* InFilters/DCCSupport/DCCSupport.h
	Explicit parameter type.

2015-02-22 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/English.lproj/GeneralPreferences.gorm
	Fields send action ond editing end, resize heights to standard.

2015-02-21 Riccardo Mottola <rm@gnu.org>

	* InFilters/DCCSupport/DCCGetter.m
	* InFilters/DCCSupport/DCCObject.m
	* InFilters/DCCSupport/DCCSender.m
	* InFilters/DCCSupport/DCCSupport.m